@@ -1,3 +1,8 @@
+2010-12-05  Bjørn Mork  <bjorn@mork.no>
+
+	* nnimap.el (nnimap-process-expiry-targets): Avoid downloading articles
+	unless necessary.
+
 2010-12-05  Andrew Cohen  <cohen@andy.bu.edu>
 
 	* nnir.el (nnir-run-gmane): Use more careful test for gmane nntp
